2018-12-18  Vladimir Makarov  <vmakarov@redhat.com>

PR rtl-optimization/87759
	* lra-assigns.c (lra_split_hard_reg_for): Recalculate
	non_reload_pseudos.

2018-12-18  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/87759
	* gcc.target/i386/pr87759.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@267244 138bc75d-0d04-0410-961f-82ee72b054a4